images et contraste correction

--- a/style.css
+++ b/style.css
@@ -744,7 +744,7 @@ h3 {
   box-shadow: 0px 0px 0px #000000;
 }
 
-h1 {
+.titre {
   color: white;
 }
 
@@ -758,7 +758,7 @@ h4 {
 }
 
 .white {
-  color:white;
+  color:#000000;
   font-size: 20px;
 }
 .text-center.white.design{
@@ -802,7 +802,10 @@ h4 {
 }
 
 .tc-white {
-    color:white;
+    color:#000000;
+}
+.contrast{
+  color: #000000 !important;
 }
 .btn-atomic-tangerine {
     background: #f3976c;
@@ -844,11 +847,11 @@ h4 {
 }
 
 .bg-banniere {
-  background-image: url("img/agence-la-panthere_resultat.jpg");
+  background-image: url("img/agence-la-panthere_6_11zon.webp");
 }
 
 .bg-presentation {
-  background-image: url("img/image-de-presentation-min.png");
+  background-image: url("img/image-de-presentation_7_11zon.webp");
 }
 
 @media (max-width: 1024px) {
